[gd_scene load_steps=6 format=3 uid="uid://bly1agwtbo417"]

[ext_resource type="Script" path="res://games/SeasoningGame/SeasoningGame.gd" id="1_qy71w"]
[ext_resource type="Texture2D" uid="uid://603ks0ip2pjq" path="res://assets/sprites/saltshaker.png" id="2_kcs3p"]
[ext_resource type="Texture2D" uid="uid://fcvsge8eycqn" path="res://assets/sprites/pepshaker.png" id="3_ett2r"]
[ext_resource type="Texture2D" uid="uid://bib0xhteecdac" path="res://assets/sprites/pinkshaker.png" id="4_6jbry"]
[ext_resource type="Texture2D" uid="uid://c4sfoqxie0nk5" path="res://assets/sprites/brownshaker.png" id="5_03brf"]

[node name="SeasoningGame" type="Node2D"]
script = ExtResource("1_qy71w")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 240.0
offset_bottom = 160.0
color = Color(0, 0.298039, 1, 1)

[node name="PatternInit" type="Node2D" parent="."]

[node name="Red" type="Sprite2D" parent="PatternInit"]
visible = false
texture_filter = 1
position = Vector2(121, 42)
texture = ExtResource("2_kcs3p")

[node name="Blue" type="Sprite2D" parent="PatternInit"]
visible = false
texture_filter = 1
position = Vector2(121, 42)
texture = ExtResource("3_ett2r")

[node name="Green" type="Sprite2D" parent="PatternInit"]
visible = false
texture_filter = 1
position = Vector2(121, 42)
texture = ExtResource("4_6jbry")

[node name="Purple" type="Sprite2D" parent="PatternInit"]
visible = false
texture_filter = 1
position = Vector2(121, 42)
texture = ExtResource("5_03brf")

[node name="PatternDisplay" type="Node2D" parent="."]
position = Vector2(-10, 75)

[node name="Red" type="TextureButton" parent="PatternDisplay"]
texture_filter = 1
offset_left = 60.0
offset_top = 42.0
offset_right = 60.0
offset_bottom = 42.0
texture_normal = ExtResource("2_kcs3p")

[node name="Blue" type="TextureButton" parent="PatternDisplay"]
texture_filter = 1
offset_left = 98.0
offset_top = 42.0
offset_right = 98.0
offset_bottom = 42.0
texture_normal = ExtResource("3_ett2r")

[node name="Green" type="TextureButton" parent="PatternDisplay"]
texture_filter = 1
offset_left = 137.0
offset_top = 42.0
offset_right = 137.0
offset_bottom = 42.0
texture_normal = ExtResource("4_6jbry")

[node name="Purple" type="TextureButton" parent="PatternDisplay"]
texture_filter = 1
offset_left = 175.0
offset_top = 42.0
offset_right = 175.0
offset_bottom = 42.0
texture_normal = ExtResource("5_03brf")

[node name="DisplayTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="PatternDisplay/Red" to="." method="_on_red_pressed"]
[connection signal="pressed" from="PatternDisplay/Blue" to="." method="_on_blue_pressed"]
[connection signal="pressed" from="PatternDisplay/Green" to="." method="_on_green_pressed"]
[connection signal="pressed" from="PatternDisplay/Purple" to="." method="_on_purple_pressed"]
[connection signal="timeout" from="DisplayTimer" to="." method="_on_display_timer_timeout"]
